# bank_statement_viz

./: .gitignore  ARCHITECTURE.md  README.md  app.py  payee_normalizer.py  pyproject.toml  requirements.txt  test_normalizer.py
data/: demo_transactions.csv
scripts/: generate_demo_data.py
tests/: test_categorization.py  test_cleaning.py  test_payee_normalizer.py  test_smoke.py
utils/: anomalies.py  budget_settings.py  budgets.py  categorization.py  category_mapping.py  charts.py  charts_forecast.py  cleaning.py  demo_mode.py  forecasting.py  loader.py  merchant_ai.py  pdf_report.py  scenario_storage.py  subscriptions.py  ynab_api.py
